@@ -1,15 +1,20 @@
+val playVersion = play.core.PlayVersion.current
+
 lazy val root = (project in file("."))
   .enablePlugins(PlayScala)
   .settings(
     name := """play-scala-compile-di-example""",
     version := "1.0-SNAPSHOT",
     scalaVersion := "2.13.8",
-    libraryDependencies += "org.scalatestplus.play" %% "scalatestplus-play" % "5.0.0" % Test,
+    libraryDependencies += "org.scalatestplus.play" %% "scalatestplus-play" % "5.1.0" % Test,
+    libraryDependencies += "com.typesafe.play" %% "play-ahc-ws" % playVersion % Test,
     scalacOptions ++= List(
       "-encoding", "utf8",
       "-deprecation",
       "-feature",
       "-unchecked",
       "-Xfatal-warnings"
-    )
+    ),
+    // Needed for ssl-config to create self signed certificated under Java 17
+    Test / javaOptions ++= List("--add-exports=java.base/sun.security.x509=ALL-UNNAMED"),
   )
